removed kafka, added micrometer for analytics